<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            style="@style/tv_style"
            android:text="Change Password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/standard_margin_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin_padding">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/tv_style"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            android:id="@+id/til_old">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_old_password"
                style="@style/tv_style"
                android:hint="@string/old_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/tv_style"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_password"
                style="@style/tv_style"
                android:hint="@string/new_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/tv_style"
            android:text="@string/password_notes"
            android:textStyle="bold"
            android:textColor="#FF0000"/>

        <Button
            style="@style/btn_style"
            android:id="@+id/btn_submit"
            android:text="@string/submit"/>
    </LinearLayout>

</LinearLayout>